color: Do not enforce T(0)=0 and T(1)=1 constraints in approxmation

Enforcing these constraints can end up giving us an inaccurate
approximation, as some transfer functions overshoot T(1).

BUG=703966

Review-Url: https://codereview.chromium.org/2784673006
Cr-Commit-Position: refs/heads/master@{#461203}

Former-commit-id: 95f83c51ade772da4b9d9aa8b1a6c40ad696a897